# donna

./: .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  AGENTS.md  DEV-SETUP.md  README.md  package.json  pnpm-lock.yaml
.agents/PRD/: PRD.md
backend/: AGENTS.md  README.md  pyproject.toml
backend/src/donna/: __init__.py  auth.py  config.py  main.py
backend/tests/: __init__.py  conftest.py  test_main.py
frontend/: .prettierignore  .prettierrc  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: AGENTS.md  TESTS-TUTORIAL.md  example.test.tsx
frontend/__tests__/components/: glowy-orb.test.tsx  user-info.test.tsx  voice-recorder.test.tsx
frontend/__tests__/components/providers/: query-provider.test.tsx
frontend/__tests__/lib/: api-client.test.ts
frontend/__tests__/lib/api/: client.test.ts  hooks.test.tsx
frontend/__tests__/utils/: mock-media-devices.ts  mock-supabase.ts  test-utils.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/actions/: auth.ts
frontend/app/app/: page.tsx
frontend/app/auth/callback/: route.ts
frontend/app/login/: page.tsx
frontend/components/: AGENTS.md  glowy-orb.tsx  user-info.tsx  voice-recorder.tsx
frontend/components/providers/: query-provider.tsx
frontend/e2e/: auth.spec.ts  example.spec.ts  voice-recording.spec.ts
frontend/lib/: api-client.ts
frontend/lib/api/: client.ts  hooks.ts
frontend/lib/supabase/: middleware.ts
frontend/mocks/: handlers.ts  server.ts
