[project]
name = "donna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
fixable = ["ALL"]
ignore = ["B008"]  # Allow function calls in argument defaults (FastAPI Depends)

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
